--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~9.1.3",
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
+    "@ngrx/store": "^9.1.1",
     "angularfire2": "^5.4.2",
     "firebase": "^7.14.2",
     "hammerjs": "^2.0.8",
